fix the dark mode colors and home page logo

--- a/docs/en/docs/assets/css/extra.css
+++ b/docs/en/docs/assets/css/extra.css
@@ -3,12 +3,25 @@
   --md-primary-fg-color--light: #ecb7b7;
   --md-primary-fg-color--dark: #0d1117;
   --md-accent-fg-color: #0b3694;
+  --logo-home-page: url(../img/Cognigy-black.svg);
+}
+
+[data-md-color-scheme=slate] {
+  /* --md-typeset-a-color:  */
+  --md-default-bg-color: #010409;
+  --md-footer-bg-color: #0d1117;
+  --card-bg-color: #0d1117;
+  --logo-home-page: url(../img/Cognigy-white.svg);
+}
+
+.logo-home-page {
+	content:var(--logo-home-page);
 }
 
 .divider {
   width: 100%;
   height: 3px;
-  background-color: #0b3694;
+  background-color: var(--md-primary-fg-color);
   margin-bottom: 5px;
 }
 
@@ -45,7 +58,7 @@
 }
 
 .md-typeset table:not([class]) th {
-  background-color: #0b3694;
+  background-color: var(--md-primary-fg-color);
   color: #ffffff;
 }
 
@@ -60,7 +73,7 @@
 }
 
 .md-nav__link--active {
-  background-color: #0b3694;
+  background-color: var(--md-primary-fg-color);
   color: white !important;
   padding: 2px;
 }
@@ -106,12 +119,12 @@ body > header > nav > div.md-header__title > div > div:nth-child(1) > span {
 }
 
 .card-link-2 > .card {
-  border: 1px solid #0b3694;
+  border: 1px solid var(--md-primary-fg-color);
 }
 
 .card-image {
   padding: 1.5rem;
-  background-color: #f7f6f9;
+  background-color: var(--card-bg-color);
   border-radius: 10px 0px 0px 10px;
   width: 30%;
 }
@@ -128,7 +141,7 @@ body > header > nav > div.md-header__title > div > div:nth-child(1) > span {
 /* Add some padding inside the card container */
 .container {
   padding: 2px 25px;
-  background-color: #f7f6f9;
+  background-color: var(--card-bg-color);
   width: 70%;
   display: flex;
   align-items: center;
@@ -175,7 +188,7 @@ body > header > nav > div.md-header__title > div > div:nth-child(1) > span {
 }
 
 .md-typeset blockquote {
-  border-left: 0.2rem solid #0b3694;
+  border-left: 0.2rem solid var(--md-primary-fg-color);
   color: #00b8d4;
   padding-left: 0.6rem;
 }
